--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
             android:icon="@android:drawable/ic_menu_month"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_arget_plan"
             android:icon="@android:drawable/checkbox_on_background"
             android:title="@string/menu_gallery" />
         <item
