--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,7 +12,7 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_arget_plan"
         android:name="com.hijiyam_koubou.taplans.ui.gallery.GalleryFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
@@ -24,10 +24,3 @@
         tools:layout="@layout/fragment_other_setting" />
 
 </navigation>
-
-    <!--    <fragment-->
-    <!--        android:id="@+id/nav_slideshow"-->
-    <!--        android:name="com.hijiyam_koubou.taplans.ui.slideshow.SlideshowFragment"-->
-    <!--        android:label="@string/menu_slideshow"-->
-    <!--        tools:layout="@layout/fragment_slideshow" />-->
-
