--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,20 +28,25 @@
             app:srcCompat="@android:drawable/ic_media_previous" />
 
         <Spinner
-            android:id="@+id/wrap_content"
+            android:id="@+id/year_spinner"
             android:layout_margin="4pt"
-            android:layout_width="wrap_content"
+            android:textAlignment="gravity"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
             android:layout_height="wrap_content" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="年" />
+            android:text="年"/>
         <Spinner
             android:id="@+id/month_spinner"
             android:layout_margin="4pt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
