#3 テキストボックスの背景色

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -877,6 +877,7 @@
                 android:id="@+id/c35tx"
                 android:text="36 36 36 36"
                 android:textColor="#ff0000"
+                android:background="#FDE7E7"
                 android:ellipsize="marquee"
                 android:singleLine="true"
                 android:layout_width="20dp"
@@ -932,6 +933,7 @@
                 android:id="@+id/c41tx"
                 android:text="42 42 42 42"
                 android:textColor="#0000ff"
+                android:background="#FDE7E7"
                 android:ellipsize="marquee"
                 android:singleLine="true"
                 android:layout_width="20dp"
