--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="sunday_background">#FDE7E7</color>
+    <color name="sunday_text_color">#ff0000</color>
+    <color name="satuday_background">#EDEDFF</color>
+    <color name="satuday_text_color">#0000FF</color>
+    <color name="default_background">#FFFFFF</color>
+    <color name="default_text_color">#000000</color>
+
 </resources>
