--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="satuday_text_color">#0000FF</color>
     <color name="default_background">#FFFFFF</color>
     <color name="default_text_color">#000000</color>
+    <color name="colorPrimary">#FF3700B3</color>
 
 </resources>
