#5  インターフェイス動作:リソースから初期値引き当て

--- a/app/src/main/res/xml/pref.xml
+++ b/app/src/main/res/xml/pref.xml
@@ -67,8 +67,7 @@
         <SwitchPreference
             android:defaultValue="false"
             android:key="set_default"
-            android:title="@string/pref_set_default"
-            />
+            android:title="@string/pref_set_default" />
     </PreferenceCategory>
     <ListPreference
         android:defaultValue="1"
