--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,12 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="sunday_background">#FDE7E7</color>
-    <color name="sunday_text_color">#ff0000</color>
-    <color name="satuday_background">#EDEDFF</color>
-    <color name="satuday_text_color">#0000FF</color>
-    <color name="default_background">#FFFFFF</color>
-    <color name="default_text_color">#000000</color>
+    <color name="sunday_background">#FFFDE7E7</color>
+    <color name="sunday_text_color">#FFFF0000</color>
+    <color name="satuday_background">#FFEDEDFF</color>
+    <color name="satuday_text_color">#FF0000FF</color>
+    <color name="default_background">#FFFFFFFF</color>
+    <color name="default_text_color">#FF000000</color>
     <color name="colorPrimary">#FF3700B3</color>
 
 </resources>
