#3 チェックした日の記録配列

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -855,6 +855,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textSize="20sp"
+                android:background="#DCDCDC"
                 />
             <CheckBox
                 android:id="@+id/c41cBox"
