--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -953,16 +953,17 @@
             android:id="@+id/sequential_updates_sw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="逐次更新"
+            android:layout_weight="8"
+            android:text="@string/set_sequential_updates"
+            android:checked="true"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
 
         <ImageButton
             android:id="@+id/save_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_margin="5dp"
+            android:layout_weight="1"
             app:srcCompat="@android:drawable/ic_popup_sync" />
 
 
